// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should complete step 1`] = `
Array [
  Object {
    "id": "1",
    "organization": Object {
      "__typename": "Community",
      "id": "4",
    },
    "receiver": Object {
      "__typename": "Person",
      "firstName": "Grace",
      "id": "3",
    },
  },
  "Step Detail",
  true,
]
`;

exports[`should delete step 1`] = `
Array [
  Object {
    "__typename": "Step",
    "community": Object {
      "__typename": "Community",
      "id": "4",
    },
    "id": "1",
    "post": Object {
      "__typename": "Post",
      "author": Object {
        "__typename": "Person",
        "fullName": "Roscoe Johnson",
        "id": "7",
        "picture": "ipsam nobis cupiditate",
      },
      "content": "sed libero repudiandae",
      "createdAt": "2015-11-12T20:05:56.328Z",
      "feedItem": Object {
        "__typename": "FeedItem",
        "community": Object {
          "__typename": "Community",
          "id": "9",
        },
        "id": "8",
      },
      "id": "6",
      "mediaExpiringUrl": "blanditiis natus et",
    },
    "receiver": Object {
      "__typename": "Person",
      "firstName": "Grace",
      "id": "3",
    },
    "reminder": Object {
      "__typename": "StepReminder",
      "id": "5",
      "nextOccurrenceAt": "2016-01-26T19:10:10.481Z",
      "reminderType": "once",
    },
    "stepSuggestion": Object {
      "__typename": "StepSuggestion",
      "descriptionMarkdown": "ratione ut sunt",
      "id": "2",
    },
    "stepType": "share",
    "title": "Repellat quisquam recusandae alias consequuntur corporis.",
  },
  "Step Detail",
]
`;

exports[`should render correctly post details 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="BackButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "flex-start",
                    "justifyContent": "center",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            <SvgMock
              color="#B4B6BA"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="removeStepButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {
                  "paddingRight": 10,
                },
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#A0A2A6",
                      "fontSize": 14,
                      "fontWeight": "bold",
                      "letterSpacing": 1,
                    },
                  ],
                ]
              }
            >
              REMOVE STEP
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": undefined,
      }
    }
    contentInset={
      Object {
        "bottom": 90,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "paddingLeft": 4,
                },
                undefined,
              ],
            ]
          }
        >
          SHARE STEP
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 32,
              "fontWeight": "300",
              "lineHeight": 38,
              "marginHorizontal": 32,
              "marginVertical": 16,
            },
          ]
        }
      >
        esse repellat quisquam
      </Text>
      <ReminderButton
        reminder={null}
        stepId="1"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "borderBottomWidth": 1,
              "borderColor": "#ECEEF2",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 24,
              "paddingVertical": 10,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-start",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#52C5DC",
                  "borderRadius": 16,
                  "height": 32,
                  "justifyContent": "center",
                  "margin": 8,
                  "width": 32,
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Array [
                      Object {
                        "color": "#ffffff",
                      },
                      Object {
                        "fontSize": 18,
                      },
                      Object {
                        "color": "#ffffff",
                        "fontSize": 18,
                      },
                    ],
                    Object {
                      "fontFamily": "icomoon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
            <ReminderDateText
              reminder={null}
              style={
                Object {
                  "fontSize": 16,
                }
              }
            />
          </View>
        </View>
      </ReminderButton>
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <Image
            resizeMode="cover"
            source={
              Object {
                "uri": "iure ut libero",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 24,
                  "height": 48,
                  "width": 48,
                },
                Object {
                  "backgroundColor": "rgb(190, 136, 115)",
                },
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "marginLeft": 10,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "fontSize": 16,
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              Grace Dibbert
            </Text>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Array [
                      Object {
                        "color": "#B2B0B2",
                        "fontSize": 12,
                      },
                      Object {},
                    ],
                  ]
                }
                testID="Text"
              >
                December 28, 2017 @ 5:58 PM
              </Text>
              <Text
                onPress={[Function]}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#3CC8E6",
                      "fontSize": 12,
                      "paddingLeft": 10,
                    },
                  ]
                }
                testID="openPostButton"
              >
                Open Post
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingTop": 10,
              },
              Object {},
            ]
          }
        >
          <View
            style={Object {}}
          >
            <View
              style={
                Object {
                  "marginVertical": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#505256",
                    "fontFamily": "SourceSansPro-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                    "paddingBottom": 20,
                  }
                }
              >
                <Text>
                  ipsam nobis cupiditate
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {},
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "uri": "dignissimos debitis incidunt",
            }
          }
          style={
            Object {
              "aspectRatio": 1.3333333333333333,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          I DID IT!
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`should render correctly while loading 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="BackButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "flex-start",
                    "justifyContent": "center",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            <SvgMock
              color="#B4B6BA"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="removeStepButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {
                  "paddingRight": 10,
                },
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#A0A2A6",
                      "fontSize": 14,
                      "fontWeight": "bold",
                      "letterSpacing": 1,
                    },
                  ],
                ]
              }
            >
              REMOVE STEP
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 13,
          },
        ]
      }
    >
      <SvgMock
        color="#B4B6BA"
        height={24}
      />
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B4B6BA",
                "fontSize": 16,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "paddingLeft": 4,
              },
              undefined,
            ],
          ]
        }
      >
        STEP OF FAITH
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 32,
            "fontWeight": "300",
            "lineHeight": 38,
            "marginHorizontal": 32,
            "marginVertical": 16,
          },
        ]
      }
    >
      
    </Text>
    <View
      style={
        Object {
          "paddingHorizontal": 32,
          "paddingTop": 26,
        }
      }
    />
  </View>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          I DID IT!
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`should render correctly without description and without reminder for me 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="BackButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "flex-start",
                    "justifyContent": "center",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            <SvgMock
              color="#B4B6BA"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="removeStepButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {
                  "paddingRight": 10,
                },
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#A0A2A6",
                      "fontSize": 14,
                      "fontWeight": "bold",
                      "letterSpacing": 1,
                    },
                  ],
                ]
              }
            >
              REMOVE STEP
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 13,
          },
        ]
      }
    >
      <SvgMock
        color="#B4B6BA"
        height={24}
      />
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B4B6BA",
                "fontSize": 16,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "paddingLeft": 4,
              },
              undefined,
            ],
          ]
        }
      >
        SHARE STEP
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 32,
            "fontWeight": "300",
            "lineHeight": 38,
            "marginHorizontal": 32,
            "marginVertical": 16,
          },
        ]
      }
    >
      esse repellat quisquam
    </Text>
    <ReminderButton
      reminder={null}
      stepId="1"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#ECEEF2",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 24,
            "paddingVertical": 10,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "flex-start",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#52C5DC",
                "borderRadius": 16,
                "height": 32,
                "justifyContent": "center",
                "margin": 8,
                "width": 32,
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Object {
                      "color": "#ffffff",
                      "fontSize": 18,
                    },
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
          <ReminderDateText
            reminder={null}
            style={
              Object {
                "fontSize": 16,
              }
            }
          />
        </View>
      </View>
    </ReminderButton>
    <View
      style={
        Object {
          "paddingHorizontal": 32,
          "paddingTop": 26,
        }
      }
    />
  </View>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          I DID IT!
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`should render correctly without description and without reminder for other 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="BackButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "flex-start",
                    "justifyContent": "center",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            <SvgMock
              color="#B4B6BA"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="removeStepButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {
                  "paddingRight": 10,
                },
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#A0A2A6",
                      "fontSize": 14,
                      "fontWeight": "bold",
                      "letterSpacing": 1,
                    },
                  ],
                ]
              }
            >
              REMOVE STEP
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 13,
          },
        ]
      }
    >
      <SvgMock
        color="#B4B6BA"
        height={24}
      />
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B4B6BA",
                "fontSize": 16,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "paddingLeft": 4,
              },
              undefined,
            ],
          ]
        }
      >
        SHARE STEP
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 32,
            "fontWeight": "300",
            "lineHeight": 38,
            "marginHorizontal": 32,
            "marginVertical": 16,
          },
        ]
      }
    >
      esse repellat quisquam
    </Text>
    <ReminderButton
      reminder={null}
      stepId="1"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#ECEEF2",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 24,
            "paddingVertical": 10,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "flex-start",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#52C5DC",
                "borderRadius": 16,
                "height": 32,
                "justifyContent": "center",
                "margin": 8,
                "width": 32,
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Object {
                      "color": "#ffffff",
                      "fontSize": 18,
                    },
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
          <ReminderDateText
            reminder={null}
            style={
              Object {
                "fontSize": 16,
              }
            }
          />
        </View>
      </View>
    </ReminderButton>
    <View
      style={
        Object {
          "paddingHorizontal": 32,
          "paddingTop": 26,
        }
      }
    />
  </View>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          I DID IT!
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`with description, with reminder should render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="BackButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "flex-start",
                    "justifyContent": "center",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            <SvgMock
              color="#B4B6BA"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="removeStepButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {
                  "paddingRight": 10,
                },
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#A0A2A6",
                      "fontSize": 14,
                      "fontWeight": "bold",
                      "letterSpacing": 1,
                    },
                  ],
                ]
              }
            >
              REMOVE STEP
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": undefined,
      }
    }
    contentInset={
      Object {
        "bottom": 90,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "paddingLeft": 4,
                },
                undefined,
              ],
            ]
          }
        >
          SHARE STEP
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 32,
              "fontWeight": "300",
              "lineHeight": 38,
              "marginHorizontal": 32,
              "marginVertical": 16,
            },
          ]
        }
      >
        esse repellat quisquam
      </Text>
      <ReminderButton
        reminder={
          Object {
            "__typename": "StepReminder",
            "id": "5",
            "nextOccurrenceAt": "2018-03-05T03:36:18.957Z",
            "reminderType": "once",
          }
        }
        stepId="1"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "borderBottomWidth": 1,
              "borderColor": "#ECEEF2",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 24,
              "paddingVertical": 10,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-start",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#52C5DC",
                  "borderRadius": 16,
                  "height": 32,
                  "justifyContent": "center",
                  "margin": 8,
                  "width": 32,
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Array [
                      Object {
                        "color": "#ffffff",
                      },
                      Object {
                        "fontSize": 18,
                      },
                      Object {
                        "color": "#ffffff",
                        "fontSize": 18,
                      },
                    ],
                    Object {
                      "fontFamily": "icomoon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
            <ReminderDateText
              reminder={
                Object {
                  "__typename": "StepReminder",
                  "id": "5",
                  "nextOccurrenceAt": "2018-03-05T03:36:18.957Z",
                  "reminderType": "once",
                }
              }
              style={
                Object {
                  "fontSize": 16,
                }
              }
            />
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="removeReminderButton"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "borderWidth": 0,
                    "height": 60,
                    "justifyContent": "center",
                    "margin": 0,
                    "paddingHorizontal": 20,
                    "paddingVertical": 10,
                  },
                  null,
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#A0A2A6",
                    "borderRadius": 16,
                    "borderWidth": 1,
                    "height": 32,
                    "margin": 8,
                    "paddingHorizontal": 0,
                    "paddingVertical": 0,
                    "width": 32,
                  },
                  null,
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Array [
                      Object {
                        "color": "#ffffff",
                      },
                      Object {
                        "fontSize": 18,
                      },
                      Object {
                        "color": "#A0A2A6",
                        "fontSize": 18,
                      },
                    ],
                    Object {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </ReminderButton>
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={Object {}}
        >
          <View
            style={
              Object {
                "marginVertical": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#505256",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              <Text>
                alias consequuntur corporis
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          I DID IT!
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`with description, without reminder should render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="BackButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "flex-start",
                    "justifyContent": "center",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            <SvgMock
              color="#B4B6BA"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="removeStepButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {
                  "paddingRight": 10,
                },
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#A0A2A6",
                      "fontSize": 14,
                      "fontWeight": "bold",
                      "letterSpacing": 1,
                    },
                  ],
                ]
              }
            >
              REMOVE STEP
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": undefined,
      }
    }
    contentInset={
      Object {
        "bottom": 90,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "paddingLeft": 4,
                },
                undefined,
              ],
            ]
          }
        >
          SHARE STEP
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 32,
              "fontWeight": "300",
              "lineHeight": 38,
              "marginHorizontal": 32,
              "marginVertical": 16,
            },
          ]
        }
      >
        esse repellat quisquam
      </Text>
      <ReminderButton
        reminder={null}
        stepId="1"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "borderBottomWidth": 1,
              "borderColor": "#ECEEF2",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 24,
              "paddingVertical": 10,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-start",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#52C5DC",
                  "borderRadius": 16,
                  "height": 32,
                  "justifyContent": "center",
                  "margin": 8,
                  "width": 32,
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Array [
                      Object {
                        "color": "#ffffff",
                      },
                      Object {
                        "fontSize": 18,
                      },
                      Object {
                        "color": "#ffffff",
                        "fontSize": 18,
                      },
                    ],
                    Object {
                      "fontFamily": "icomoon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
            <ReminderDateText
              reminder={null}
              style={
                Object {
                  "fontSize": 16,
                }
              }
            />
          </View>
        </View>
      </ReminderButton>
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={Object {}}
        >
          <View
            style={
              Object {
                "marginVertical": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#505256",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              <Text>
                alias consequuntur corporis
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          I DID IT!
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;
